--- a/Parcial2/src/app/app.component.html
+++ b/Parcial2/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-info">
+<div >
   <div class="row">
       <img src="https://raw.githubusercontent.com/2603-Uniandes/jsons/main/logo.webp" class="col-1" style="width: 65px; height: 52px;">
       <h1 class="col-2">Dinosaurios</h1>
